--- a/todo-list-proj/public/index.html
+++ b/todo-list-proj/public/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <form action="http://localhost:3000/todos" method="POST" id="new-task-form">
-      <input type="text" name="title" placeholder="What task do you have?">
+      <input type="text" id="new-task-input" name="title" placeholder="What task do you have?">
       <input type="checkbox" name="completed" id="checkbox1" value="false">not completed
       <input type="checkbox" name="completed" id="checkbox1" value="true">completed
       <input type="submit" id="new-task-submit" value="Submit">
