--- a/todo-list-proj/public/index.html
+++ b/todo-list-proj/public/index.html
@@ -13,11 +13,16 @@
       <h1>To-Do List</h1>
     </header>
 
-    <form action="http://localhost:3000/todos" method="POST" id="new-task-form">
+    <!-- <form action="http://localhost:3000/todos" method="POST" id="new-task-form">
       <input type="text" id="new-task-input" name="title" placeholder="What task do you have?">
       <input type="checkbox" name="completed" id="checkbox1" value="false">not completed
       <input type="checkbox" name="completed" id="checkbox1" value="true">completed
       <input type="submit" id="new-task-submit" value="Submit">
+    </form> -->
+
+    <form id="form">
+      <input type="text" name="title" placeholder="Enter New Task">
+      <button type="submit">Submit</button>
     </form>
 
   </div>
