POST now include completion status

--- a/todo-list-proj/public/index.html
+++ b/todo-list-proj/public/index.html
@@ -22,6 +22,7 @@
 
     <form id="form">
       <input type="text" name="title" placeholder="Enter New Task">
+      <input type="hidden" name="completed" value = false>
       <button type="submit">Submit</button>
     </form>
 
