--- a/todo-list-proj/public/index.html
+++ b/todo-list-proj/public/index.html
@@ -13,17 +13,10 @@
       <h1>To-Do List</h1>
     </header>
 
-    <!-- <form action="http://localhost:3000/todos" method="POST" id="new-task-form">
-      <input type="text" id="new-task-input" name="title" placeholder="What task do you have?">
-      <input type="checkbox" name="completed" id="checkbox1" value="false">not completed
-      <input type="checkbox" name="completed" id="checkbox1" value="true">completed
-      <input type="submit" id="new-task-submit" value="Submit">
-    </form> -->
-
     <form id="form">
-      <input type="text" name="title" placeholder="Enter New Task">
+      <input class="form-title"type="text" name="title" placeholder="Enter New Task">
       <input type="hidden" name="completed" value = false>
-      <button type="submit">Submit</button>
+      <button class="form__button-submit" type="submit">Submit</button>
     </form>
 
   </div>
